add logic to adjust score for unplayed tiles